# example-opengl-android

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/opengljava/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/shaders/: color_fragment.glsl
app/src/main/cpp/: CMakeLists.txt  gl_renderer.cpp  jni_bridge.cpp  matrix.cpp
app/src/main/cpp/include/: gl_renderer.h  matrix.h
app/src/main/cpp/shaders/: color_vertex.glsl
app/src/main/java/com/example/opengljava/: MainActivity.java  MyGLRenderer.java  MyGLSurfaceView.java  NativeGLRenderer.java  NativeGLSurfaceView.java  NativeRenderer.java  Shape.java  Square.java  Triangle.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/opengljava/: ExampleUnitTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
